edited the new tweet button size to fit on mobile layouts properly. Added zoom prevention to index.html head

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -19,6 +19,7 @@
  }
 
  .new-tweet-button {
+   font-size: 14pt;
    color: #ffffff;
    margin: 1.5em;
    float: right;
