--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -34,7 +34,6 @@
 }
 
 .tweet .content {
-  word-break: break-all;
   margin: 1.5em;
   padding: 1em;
   border-bottom: solid;
